<?xml version="1.0"?>
<package>
  <name>plugin_manager</name>
  <version>0.0.0</version>
  <description>manager of arms</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="frank@todo.todo">frank</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
